--- a/sample.htm
+++ b/sample.htm
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<div id="imageViewer">
-			<img id="image" src="https://pixy.org/src/23/230366.jpg">
+			<img src="https://pixy.org/src/23/230366.jpg">
 		</div>
 		<script type="text/javascript">
-			StaticImageViewer.enable();
+			StaticImageViewer.enable(imageViewer);
 		</script>
 	</body>
 </html>
